--- a/index.css
+++ b/index.css
@@ -87,6 +87,15 @@ h2 {
     margin-bottom: 10px;
 }
 
+h3 {
+    font-size: 20px;
+    /* Заголовок уровня 2 */
+    font-weight: 700;
+    font-family: "Helvetica-bold";
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
 
 a {
     color: #4381b5;
